--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   convert: ^2.1.1
   flutter_datetime_picker: ^1.3.8
 
+#dependency_overrides:
+  #flutter_svg: 0.18.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
