--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   http:
   convert: ^2.1.1
   flutter_datetime_picker: ^1.3.8
+  fancy_bottom_navigation: ^0.3.2
+  #qr_code_scanner: ^0.0.13
 
 #dependency_overrides:
   #flutter_svg: 0.18.0
