--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   convert: ^2.1.1
   flutter_datetime_picker: ^1.3.8
   fancy_bottom_navigation: ^0.3.2
-  #qr_code_scanner: ^0.0.13
+  barcode_scan: ^3.0.1
 
 #dependency_overrides:
   #flutter_svg: 0.18.0
@@ -51,8 +51,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+    - images/scan.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
