--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_datetime_picker: ^1.3.8
   fancy_bottom_navigation: ^0.3.2
   barcode_scan: ^3.0.1
+  toggle_switch: ^0.1.8
 
 #dependency_overrides:
   #flutter_svg: 0.18.0
